# CVRP_Proyecto

./: CMakeLists.txt
include/: brute_force.hpp  greedy.hpp  local_search_intra.hpp  mainwindow.hpp  vrp_base.hpp
main/: main.cpp
src/: brute_force.cpp  greedy.cpp  local_search_intra.cpp  mainwindow.cpp
tests/: 1000C.txt  100C.txt  10C.txt  200C.txt  3000C.txt  500C.txt  50C.txt  5C.txt  6C.txt  7C.txt  8C.txt  9C.txt
ui/: mainwindow.ui
